force-app/main/default/objects/Financial_Period__c/Financial_Period__c.object-meta.xml
<CustomObject>
    <label>Financial Period</label>
    <nameField>
        <label>Financial Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>