force-app/main/default/objects/Financial_Period__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio</label>
    <referenceTo>Portfolio__c</referenceTo>
    <relationshipLabel>Financial Periods</relationshipLabel>
    <relationshipName>Financial_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>